package cashflow.command;

public interface Command {
    void execute();
}
